# realHTML4NaturalTomcatConnector

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.build  Makefile  Makefile.in  Readme.md  configure  configure.in  natural-ce_build.sh  natural-ce_compile.sh
docker/: Dockerfile  config.xml  entrypoint.sh  setenv.sh
docker/fuser/DEMO/: FILEDIR.SAG
docker/fuser/RH4N/: FILEDIR.SAG
docker/fuser/SAMP4ONE/: FILEDIR.SAG
docker/fuser/TESTLIB/: FILEDIR.SAG
docker/testWorkspace/lambda/: .natural  .project
docker/testWorkspace/rh4nTest/: .natural  .project
docker/testWorkspace/testProject/: .project
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.component.html  app.component.ts  app.module.ts  routes.ts
java/Connector/: .classpath  .project
jniLibrary/include/: realHTML_tomcat_connector_JNINatural.h  rh4n_jni.h  rh4n_jni_environ.h  rh4n_jni_javaParmReadout.h
jniLibrary/src/: rh4n_jni_callNatural.c  rh4n_jni_checkForNewMessage.c  rh4n_jni_childProcess.c  rh4n_jni_dumpEnvirons.c  rh4n_jni_dumpSessionInformations.c  rh4n_jni_environ.c  rh4n_jni_getChildProcessStatus.c  rh4n_jni_javaParmReadout.c  rh4n_jni_main.c  rh4n_jni_passwd.c  rh4n_jni_plain_main.c  rh4n_jni_recvMessage.c  rh4n_jni_test_jsonconverter.c  rh4n_jni_utils.c
m4/: ax_jni_include_dir.m4
scripts/: config_converter.html  filterBuildOutput.awk  stresstest.sh  testDeploy.sh  testrh4n
servlet/src/: RealHTMLHandler.java  RealHTMLInit.java  RealHTMLLogin.java  RealHTMLLogout.java  RealHTMLManageEnvironment.java  RealHTMLManageEnvironmentVars.java
(+1228 files in other folders)
